finished but not tested repository installation function

--- a/configs/royal.yaml
+++ b/configs/royal.yaml
@@ -16,6 +16,7 @@ translator_type: native
 cmd_schema:
   - name: ls
     usage: ls [path]
+    n_args: 1
     admin: false
     # If opcode is specified, the provided integer opcode is used in place of the command name, promoting better OpSec
     opcode: 0x1
@@ -24,6 +25,7 @@ cmd_schema:
 
   - name: clean
     usage: clean
+    n_args: 0
     admin: true
     opcode: 0x2
     description_short: self delete and terminate process.
