finished testing of install command, added install script

--- a/configs/royal.yaml
+++ b/configs/royal.yaml
@@ -31,10 +31,10 @@ cmd_schema:
     description_short: self delete and terminate process.
     description_long: self delete and terminate process.
 
-# The script used to build the agent
+# The script, or binary, used to build the agent
 build_script: /build.sh
 # The path that the agent is created at after a successful build
-build_path: /tmp/example.exe
+build_path: /tmp
 # The directory where the build routine takes place
 source_dir: /src
 # These are custom build arguments that can be used for building, in addition to default build arguments provided
