--- a/docker/builder/Dockerfile
+++ b/docker/builder/Dockerfile
@@ -1,3 +1,6 @@
+# The following Dockerfile is simply an EXAMPLE of what a builder dockerfile may look like.
+# It should not be used in production anywhere, by anyone. It exists for testing purposes only.
+
 # This Dockerfile is used as a base image for the container that provides the build routine for the specific agent.
 FROM alpine:latest
 
