--- a/configs/royal.yaml
+++ b/configs/royal.yaml
@@ -7,6 +7,7 @@ name: example-agent
 version: 1.0
 author: pygrum
 url: https://github.com/pygrum/monarch
+supported_os: [ windows, linux, macos ]
 
 # The translator is used to translate messages between the C2 and agent.
 translator_name: example_tr
@@ -43,3 +44,6 @@ builder:
     - name: email
       description: operator's email address
       required: true
+    - name: password
+      description: password to activate the agent
+      default: password123 # can give build args defaults
