refactor: translator -> builder

--- a/configs/royal.yaml
+++ b/configs/royal.yaml
@@ -11,7 +11,7 @@ supported_os: [ windows, linux, macos ]
 
 # The command schema defines the possible commands that can be used with the agent.
 # If the agent doesn't use commands to operate, then this configuration parameter is not necessary.
-# On installation of the agent, the command schema is used by the translator when an operator requests to
+# On installation of the agent, the command schema is used by the builder when an operator requests to
 # view commands.
 cmd_schema:
   - name: ls
