tested and fixed builder by transmitting build as base64 and adjusting max size for grpc

--- a/templates/builder/Dockerfile
+++ b/templates/builder/Dockerfile
@@ -1,7 +1,7 @@
 # The following Dockerfile is simply an EXAMPLE of what a builder dockerfile may look like.
 # It should not be used in production anywhere, by anyone. It exists for testing purposes only.
 
-FROM alpine:latest
+FROM monarch:latest
 
 WORKDIR /app
 
@@ -9,4 +9,5 @@ COPY royal.yaml .
 COPY example-service.py .
 COPY requirements.txt .
 
-CMD [ "./royal.yaml", "/example-service.py", "requirements.txt" ]
+# must specify full paths
+CMD [ "/app/royal.yaml", "/app/example-service.py", "/app/requirements.txt" ]
