--- a/docker/builder/Dockerfile
+++ b/docker/builder/Dockerfile
@@ -2,13 +2,17 @@ FROM golang:latest
 
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install python3 -y && \
-    apt-get install python3-pip \
+    apt-get install python3-pip -y
 
-WORKDIR /app
+# install monarch SDK
+RUN rm /usr/lib/python3.11/EXTERNALLY-MANAGED
+RUN python3 -m pip install -i https://test.pypi.org/simple/ monarch-c2-sdk==0.0.3
+
+WORKDIR /go/delivery
 
 COPY . .
 
 RUN go build -o app cmd/builder/main.go
 
 # accepts 3 args - see usage in builder.go
-ENTRYPOINT [ "./app" ]
+ENTRYPOINT [ "/go/delivery/app" ]
