--- a/configs/royal.yaml
+++ b/configs/royal.yaml
@@ -16,20 +16,13 @@ supported_os: [ windows, linux, macos ]
 cmd_schema:
   - name: ls
     usage: ls [path]
-    n_args: 1
+    min_args: 0
+    max_args: 1
     admin: false
-    # If opcode is specified, the provided integer opcode is used in place of the command name, promoting better OpSec
+    # When opcode is specified, the provided integer opcode is used in place of the command name, promoting better OpSec
     opcode: 0x1
     description_short: list files in a directory.
     description_long: list files in a directory.
-
-  - name: clean
-    usage: clean
-    n_args: 0
-    admin: true
-    opcode: 0x2
-    description_short: self delete and terminate process.
-    description_long: self delete and terminate process.
 
 builder:
   # agent source code root
