passing CMD rather than ENTRYPOINT

--- a/pkg/install/testdata/docker/builder/Dockerfile
+++ b/pkg/install/testdata/docker/builder/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /app
 
 COPY . .
 
-ENTRYPOINT [ "/app/royal.yaml", "/app/service.py", "/app/requirements.txt" ]
+CMD [ "/app/royal.yaml", "/app/service.py", "/app/requirements.txt" ]
