--- a/.github/workflows/pypi-deploy.yml
+++ b/.github/workflows/pypi-deploy.yml
@@ -16,6 +16,7 @@ jobs:
         run: python3 -m pip install --user --upgrade setuptools wheel twine
       - name: setup distribution
         run: python3 setup.py sdist bdist_wheel
+        continue-on-error: false
 
       - name: Publish to test PyPi
         uses: pypa/gh-action-pypi-publish@release/v1
