int32 for args rather than uint32 as max-args can be <0

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     env:
-      IMAGE_VERSION: 0.0.1
+      IMAGE_VERSION: 0.0.2
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,5 +24,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: pygrum/monarch:${{ env.IMAGE_VERSION }}
+          tags: pygrum/monarch:${{ env.IMAGE_VERSION }},pygrum/monarch:latest
           file: ./docker/builder/Dockerfile
