added stagecmd to stage agent files

--- a/configs/monarch.yaml
+++ b/configs/monarch.yaml
@@ -7,8 +7,11 @@ interface: 0.0.0.0
 
 httpport: 8000
 httpsport: 4433
+
 loginendpoint: /login
 mainendpoint: /
+stageendpoint: /index/{file}
+
 session_timeout_minutes: 60
 
 installdir: agents
