--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -12,10 +12,22 @@ jobs:
       IMAGE_VERSION: latest # just for test
     steps:
       - uses: actions/checkout@v3
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            sources:
+              - 'pkg/**'
+              - 'cmd/**'
+              - 'scripts/**'
+              - 'docker/builder/**'
+            python:
+              - 'python/**'
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
+        if: steps.filter.outputs.sources == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -23,6 +35,7 @@ jobs:
 
       - name: Push
         uses: docker/build-push-action@v3
+        if: steps.filter.outputs.sources == 'true'
         with:
           context: .
           push: false
@@ -31,9 +44,12 @@ jobs:
 
       - name: Install python package
         uses: actions/setup-python@v4
+        if: steps.filter.outputs.python == 'true'
         continue-on-error: false
 
       - name: upgrade pip packages
+        if: steps.filter.outputs.python == 'true'
         run: python3 -m pip install --user --upgrade setuptools wheel twine
       - name: setup distribution
+        if: steps.filter.outputs.python == 'true'
         run: python3 python/setup.py sdist bdist_wheel
